# MediKnight

./: README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  audit_logs.py  auth.py  health.py  invites.py  patients.py
backend/app/core/: config.py  security.py  supabase.py
backend/app/db/: __init__.py  session.py
backend/app/dependancies/: auth.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  invite.py  patient_record.py  prescription.py  users.py
backend/app/schemas/: __init__.py  appointment.py  audit_log.py  auth.py  invite.py  patient_record.py  prescription.py
backend/app/services/: auth.py  storage.py  supabase.py
frontend/: README.md  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/forgot-password/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/mfa/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/components/access-control/: permission-badge.tsx  restricted-section.tsx  role-indicator.tsx
frontend/components/auth/: forgot-password-form.tsx  login-form.tsx  mfa-form.tsx  mfa-input.tsx  signup-form.tsx
frontend/components/dashboard/: activity-timeline.tsx  security-status.tsx
frontend/components/layout/: dashboard-layout.tsx  navbar.tsx  sidebar.tsx
frontend/components/modals/: sensitive-action-modal.tsx
frontend/lib/: api.ts  auth-context.tsx  constants.ts  types.ts
frontend/lib/hooks/: use-dashboard-data.ts  use-patient-data.ts
(+15 files in other folders)
